--- a/2. Cryptography/2. Secure hashing.md
+++ b/2. Cryptography/2. Secure hashing.md
@@ -25,7 +25,6 @@ The usage of hashes is very broad. Even git uses secure hashes to create integri
 # Secure hash algorithms
 The are a lot of different secure hash algorithms. Please use hash functions that are not broken in your applications. Some examples are
 
-
 |Algorithm|Date|Bits|Broken|
 |---|---|---|---|
 |MD5|1991|128|Yes|
@@ -51,3 +50,88 @@ But ... even with a salt brute-force attacks are possible and therefore it is re
 You can try online to see how the secure hash changes based on the input. Try to make a small change and see the output. Look to different algorithms. Good luck!
 - https://emn178.github.io/online-tools/sha256.html
 - https://guggero.github.io/blockchain-demo/#!/hash
+
+# Coding examples
+## Python
+Install the CryptoDome library that contains a lot of cryptographic functions by ```pip install pycryptodome```.
+
+```python
+from Crypto.Hash import MD5, SHA256, SHA512
+
+# Create an MD5 hash
+md5 = MD5.new(data=b'This is my message!')
+print("MD5:    " + md5.hexdigest())
+# MD5:    387eaca94fb12225948734d55642ea2f
+SHA256: a3c5e9c6764f54e592090b80c2d642dc200c35ced82b6b22896fba417b51370d
+sha256 = SHA256.new(data=b'This is my message!')
+print("SHA256: " + sha256.hexdigest())
+# SHA256: a3c5e9c6764f54e592090b80c2d642dc200c35ced82b6b22896fba417b51370d
+
+sha512 = SHA512.new(data=b'This is my message!')
+print("SHA512: " + sha512.hexdigest())
+# SHA512: 4e312c2fc45fbf06132143bb66fa116f4ec0fa65f4ce353f3cf9f027bc65ff50bceab5e9588c522e1ddf67853204d6115c9095f7ab654d9f66db7b8db91213f5
+
+# For larger chunks of data you can use the update method
+hash_object1 = SHA256.new(data=b'This')
+hash_object1.update(b' is ')
+hash_object1.update(b'my message!')
+print("SHA256: " + hash_object1.hexdigest())
+# SHA256: a3c5e9c6764f54e592090b80c2d642dc200c35ced82b6b22896fba417b51370d
+# Not it is the same hash, because it is also the same input message!
+```
+
+## Ardiuno embedded
+```c
+#include <Crypto.h> // https://github.com/intrbiz/arduino-crypto
+SHA256 hasher;
+
+void printSHA256 (byte hash[SHA256_SIZE]) {
+  for (byte i=0; i < SHA256_SIZE; i++) {
+      if (hash[i]<0x10) { Serial.print('0'); }
+      Serial.print(hash[i], HEX);
+  }
+  Serial.println();
+}
+
+void getSHA256(String text, byte hash[SHA256_SIZE]) {
+  hasher.doUpdate(text.c_str(), text.length());  
+  hasher.doFinal(hash);
+  // REQUIRED BUG FIX: https://github.com/intrbiz/arduino-crypto/pull/28
+}
+
+void testSHA256() {
+  String text1 = "Maurice Snoeren";   // 4CCB5A7BF865C0F3AB446C6512B5B264F4BFBAF4A96802C36D41C69F51BF7057
+  String text2 = "Embedded Security"; // 2589C599DFC1731E427AA3CF2D6A6757AA9E4E7D4E35B97DEB0D6E2799DC8814
+
+  byte hash[SHA256_SIZE];
+
+  unsigned long timing = micros();
+  getSHA256(text1, hash);
+  Serial.println("Timing: " + String(micros() - timing) + "us");
+  Serial.print("HASH:  ");
+  printSHA256(hash);
+  Serial.println("CHECK: 4CCB5A7BF865C0F3AB446C6512B5B264F4BFBAF4A96802C36D41C69F51BF7057");
+
+  timing = micros();
+  getSHA256(text2, hash);
+  Serial.println("Timing: " + String(micros() - timing) + "us");
+  Serial.print("HASH:  ");
+  printSHA256(hash);
+  Serial.println("CHECK: 2589C599DFC1731E427AA3CF2D6A6757AA9E4E7D4E35B97DEB0D6E2799DC8814");
+}
+```
+
+## nodejs
+For nodejs and cryptography see ```https://nodejs.org/api/crypto.html```.
+```javascript
+const {
+  createHash,
+} = await import('node:crypto');
+
+const hash = createHash('sha256');
+
+hash.update('some data to hash');
+console.log(hash.digest('hex'));
+// Prints:
+//   6a2da20943931e9834fc12cfe5bb47bbd9ae43489a30726962b576f4e3993e50
+```
