--- a/2. Cryptography/3. Symmetric cryptography.md
+++ b/2. Cryptography/3. Symmetric cryptography.md
@@ -1,7 +1,29 @@
 _Author: Maurice Snoeren_
 
 # Symmetric cryptography
-Bob wants to send a secret message to Alice. Symmetric cryptography uses one key for both encryption and decryption. So, both Bob and Alice need to have the same key. Bob encrypts the plain text using the key to cipher text. This cipher text is send to Alice. If Oscar is getting this message, without the key it cannot be decrypted. Alice receives the cipher text and decrypts it with the same key as Bob to plain text. 
+Bob wants to send a secret message to Alice. Symmetric cryptography uses one key for both encryption and decryption. So, both Bob and Alice need to have the same key. Bob encrypts the plain text using the key to cipher text. This cipher text is send to Alice. If Oscar is getting this message, without the key it cannot be decrypted. Alice receives the cipher text and decrypts it with the same key as Bob to plain text. There are different symmetric algorithms that can be used
+
+|Algorithm|Date|Bits|Type|Broken|
+|---|---|---|---|---|
+|DES|1977|56|Block cipher|Yes|
+|3DES|1981|112 or 168|Block cipher|Yes|
+|Blowfish||64|Block cipher|Yes|
+|GOST||64|Block cipher|Yes|
+|AES|1997|128, 192 or 256|Block cipher|No|
+|Salsa20 / ChaCha20|2004|128 or 256|Stream cipher|No|
+|Serpent||128, 192 or 256|Block cipher|No|
+|Twofish||128, 192 or 256|Block cipher|No|
+|Camellia||128, 192 or 256|Block cipher|No|
+|RC2||64|Block cipher|Yes|
+|RC4|||Stream cipher|Yes|
+|RC5||128 to 2040|Block cipher|No, but Yes for short keys|
+|RC6||128 to 2040|Block cipher|No|
+|IDEA||128|Block cipher|No|
+|CAST||40 to 256|Block cipher|No|
+|ARIA||128, 192 or 256|Block cipher|No|
+|SM4||128|Block cipher|No|
+
+AES and Salsa20 are the most popular cipher algorithms. AES-256 is considered military grade secure.
 
 # Exchanging keys
 How do you exchange the key? It cannot be send over the same channel. When Oscar reveives it, he is also able to decrypt the text. So, the key needs to be exchanged in another way. You could think of the Bob and Alice meet each other physically and exchange the key in-person. However, there are also digital means to exchange keys with for example key exchange mechanisms. In this case, information is exchanged between Alice and Bob with which Alice and Bob are able to calculate the shared key. Oscar is not able to do the same thing, because the calculation is based on secret information that is not sent by Alice and Bob. However the public information was a result of this secret information. Some example of key exchange algorithms are
@@ -13,4 +35,52 @@ How do you exchange the key? It cannot be send over the same channel. When Oscar
 - Elliptic-curve Diffie-Hellman key exchange
 
 # Man-in-the-middle attacks
-When exchanging keys the difficulty is to determine you are talking with the genuine user or appliance. If someone is ablt to put themselve in the middle of the communication, it could be possible that this person is able to settle the keys with both entities and after it is able to see all communication. If it is important to the project, the key exchange shall implement also the authentication of the identity of the connected device. TLS is a protocol that also implement these kind of schemes. 
+When exchanging keys the difficulty is to determine you are talking with the genuine user or appliance. If someone is ablt to put themselve in the middle of the communication, it could be possible that this person is able to settle the keys with both entities and after it is able to see all communication. If it is important to the project, the key exchange shall implement also the authentication of the identity of the connected device. TLS is a protocol that also implement these kind of schemes.
+
+# Coding examples
+## Python
+Install the CryptoDome library that contains a lot of cryptographic functions by ```pip install pycryptodome```.
+
+```python
+import json
+
+from base64 import b64encode, b64decode
+from Crypto.Cipher import AES
+from Crypto.Util.Padding import pad, unpad
+from Crypto.Random import get_random_bytes
+
+# Encryption AES CBC mode - Block cipher
+# Ciphertext Block Chaining, defined in NIST SP 800-38A, section 6.2. It is a mode of operation
+# where each plaintext block gets XOR-ed with the previous ciphertext block prior to encryption.
+
+data = b"Cybersecurity rulez!!"
+key = get_random_bytes(16)
+cipher = AES.new(key, AES.MODE_CBC)
+ct_bytes = cipher.encrypt(pad(data, AES.block_size))
+iv = b64encode(cipher.iv).decode('utf-8')
+ct = b64encode(ct_bytes).decode('utf-8')
+result = json.dumps({'iv':iv, 'ciphertext':ct})
+print("Encrypted data:")
+print(result)
+
+# Example result:
+# {"iv": "bWRHdzkzVDFJbWNBY0EwSmQ1UXFuQT09", "ciphertext": "VDdxQVo3TFFCbXIzcGpYa1lJbFFZQT09"}
+
+# Decryption
+
+json_input = result
+
+try:
+    b64 = json.loads(json_input)
+    iv = b64decode(b64['iv'])
+    ct = b64decode(b64['ciphertext'])
+    cipher = AES.new(key, AES.MODE_CBC, iv)
+    pt = unpad(cipher.decrypt(ct), AES.block_size)
+    print("Decrypted data:")
+    print("The message was: ", pt)
+
+except (ValueError, KeyError):
+    print("Incorrect decryption")
+```
+
+## 
