Adding two more elements

--- a/7. Measures/1. Introduction.md
+++ b/7. Measures/1. Introduction.md
@@ -16,8 +16,10 @@ The following example can be given.
 |Secure key exchange|Exchange a symmetric key between two applications using the Diffie-Helmann|Exchanging secure keys cannot be done in plain sight over the Internet. In order to do this, algorithms are used that using public information both applications are able to calculate the shared key.|
 |Secure boot|Make sure that the embedded device validate and verify the flash program. If it is genuine it will start the program, otherwise it will stop.|When having embedded devices in a hostile environment, it is possible that attackers try to change the firmware. With secure boot, this can be checked. When attackers changes the firmware, the embedded device will not start the main program.|
 |One time password|Multi-factor authentication. A user uses Google authenticator to store the secret key and derives every 30 seconds a one-time password.|When only a user and password is required to login, it is possible that an attacker can brute-force, guess or just know the password. In order to make sure that an attacker is still not able to login, multi-factor authentication is used. The factors are about what a user **knows**, what a user **has** and what a user **is**.|
-|JWT token|
-|Signing|
+|JWT token|Use a JWT token to autorise against services the user use. A JWT token will be created when the user authorize to the system. Use session tokens that are required to be refreshed.|The risk is that it is difficult to provide a means for autorisation if you have different services. Also if a certain service is not from you. Identification can be done in a central way using JWT tokens.|
+|Signing|Sign a message such that the other side is able to determine that the message is not changed and is comming from the sender.|The risk is that someone else could be able to perform a man in the middle attack and change the data. Signing prevents this and is less computationally expensive than encryption.|
+|Encryption of data|
+|Secure vault|
 
 # Assignment
 Decide in which platform you would like to program it. Create an proof-of-concept not a full application. Google and use the teacher. Use the libraries that are provided by the examples.
@@ -29,4 +31,4 @@ Decide in which platform you would like to program it. Create an proof-of-concep
 5. Implement a JWT token with a identity server and a service server
 6. Implement secure key exchange between two applications using ECC (Eliptic-Curves) and send an excrypted text with AES encryption using the key.
 7. Implement signing of a message and check it as well.
-
+8. Implement secure key exchange between two applications using asymmetric encryption (RSA) and send an encrypted text using symmetric AES encryption using the exchanged key.
