--- a/7. Measures/1. Introduction.md
+++ b/7. Measures/1. Introduction.md
@@ -32,3 +32,4 @@ Decide in which platform you would like to program it. Create an proof-of-concep
 6. Implement secure key exchange between two applications using ECC (Eliptic-Curves) and send an excrypted text with AES encryption using the key.
 7. Implement signing of a message and check it as well.
 8. Implement secure key exchange between two applications using asymmetric encryption (RSA) and send an encrypted text using symmetric AES encryption using the exchanged key.
+9. Implement a secure vault that stores secret data using a password from the user. Use key derivation methods
